<resources>
    <string name="app_name">Eksperymentowo</string>

    <string name="action_settings">Settings</string>
                <!-- Main Activity -->
                <!-- SUCHY LÓD-->
    <string name="dry_ice">Suchy lód</string>
    <string name="dry_ice_1">Zlewki i Kolby</string>
    <string name="dry_ice_2">Strzelające kaplse</string>
    <string name="dry_ice_3">Czarodziejska kula</string>
    <string name="dry_ice_4">Lodowe bańki</string>
    <string name="dry_ice_5">Napełniamy balony</string>

                <!-- BALONY -->
    <string name="balloons">Balony</string>
    <string name="balloons_1">Szaszłyk</string>
    <string name="balloons_2">Zapalniczka</string>

                <!--POLIMERY-->
    <string name="polymer">Polimery</string>
    <string name="polymer_1">Sztuczny śnieg</string>
    <string name="polymer_2">Żel</string>

                <!-- EKSPERYMENT ACTIVITY -->
    <string name="need">Co potrzebne ?</string>
    <string name="how_done">Jak zrobić ?</string>
    <string name="how_lead">Jak prowadzić ?</string>

                <!-- ZLEWKI I KOLBY -->
    <string name="dry_ice_1_n_1">Kolby i Zlewki</string>
    <string name="dry_ice_1_n_2">Barwniki spożywcze</string>
    <string name="dry_ice_1_n_3">Kilka kostek suchego lodu</string>
    <string name="dry_ice_1_n_4">Gorocą Woda</string>
    <string name="title_activity_experiment">Experiment</string>
    <string name="hello_world">Hello world!</string>




</resources>
