<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eksperymentowo_logo_kwadrat"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/b_m_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff0099cc"
            android:text="@string/dry_ice"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/l_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/b_m_1"
            android:paddingLeft="20sp">

            <Button
                android:id="@+id/b_i_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9633b5e5"
                android:text="@string/dry_ice_1"/>

            <Button
                android:id="@+id/b_i_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9633b5e5"
                android:text="@string/dry_ice_2"/>

            <Button
                android:id="@+id/b_i_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9633b5e5"
                android:text="@string/dry_ice_3"/>

            <Button
                android:id="@+id/b_i_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9633b5e5"
                android:text="@string/dry_ice_4"/>

            <Button
                android:id="@+id/b_i_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9633b5e5"
                android:text="@string/dry_ice_5"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_m_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff9933cc"
            android:text="@string/balloons"
            android:textStyle="bold"
            android:layout_below="@id/l_i"/>

        <LinearLayout
            android:id="@+id/l_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/b_m_2"
            android:paddingLeft="20dp">

            <Button
                android:id="@+id/b_b_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96aa66cc"
                android:text="@string/balloons_1"/>

            <Button
                android:id="@+id/b_b_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96aa66cc"
                android:text="@string/balloons_2"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_m_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff8800"
            android:text="@string/polymer"
            android:layout_below="@id/l_b"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/l_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/b_m_3"
            android:paddingLeft="20dp">

            <Button
                android:id="@+id/b_p_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96ffbb33"
                android:text="@string/polymer_1"/>

            <Button
                android:id="@+id/b_p_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96ffbb33"
                android:text="@string/polymer_2"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>